@@ -7,9 +7,13 @@ import com.badlogic.gdx.Input.Keys;
 import com.google.gwt.user.client.Window.Navigator;
 
 public class UIUtils {
+	static public boolean isAndroid = Navigator.getPlatform().contains("Android");
 	static public boolean isMac = Navigator.getPlatform().contains("Mac");
 	static public boolean isWindows = Navigator.getPlatform().contains("Win");
 	static public boolean isLinux = Navigator.getPlatform().contains("Linux");
+	static public boolean isIos = Navigator.getPlatform().contains("iPhone")
+			|| Navigator.getPlatform().contains("iPod")
+			|| Navigator.getPlatform().contains("iPad");
 
 	static public boolean left () {
 		return Gdx.input.isButtonPressed(Buttons.LEFT);
