@@ -11,6 +11,15 @@
     UI should load here shortly:<br>
     <div id="embed-com.badlogic.gdx.tests.gwt.GdxTestsGwt"></div>
     <small>This page is from <code>tests/gdx-tests-gwt/war/index.html</code></small>
-    <script type="text/javascript" language="javascript" src="com.badlogic.gdx.tests.gwt.GdxTestsGwt/com.badlogic.gdx.tests.gwt.GdxTestsGwt.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="com.badlogic.gdx.tests.gwt.GdxTestsGwt/com.badlogic.gdx.tests.gwt.GdxTestsGwt.nocache.js">
+window.onkeydown =
+  function(event) {
+    // prevent all navigation keys except the space key
+    if([9, 33, 34, 35, 36, 37, 38, 39, 40].indexOf(event.keyCode) > -1) {
+        event.preventDefault();
+        return false;
+    }
+  };
+    </script>
   </body>
 </html>
