@@ -25,6 +25,12 @@
 - API Change: DragAndDrop only removes actors that were not already in the stage. This is to better support using a source actor as the drag actor, see #5675 and #5403.
 - API Change: Changed TiledMapTileLayer#tileWidth & #tileHeight from float to int
 - API Addition: convenient Matrix4 rotate methods: rotateTowardDirection and rotateTowardTarget
+- API Addition: Convenience method Actions#targeting(Actor, Action) to set an action's target.
+- API Change: Correction of TextField#ENTER_ANDROID renamed to NEWLINE and TextField#ENTER_DESKTOP renamed to CARRIAGE_RETURN.
+- API Change: Changed the visibility of TextField#BULLET, TextField#DELETE, TextField#TAB and TextField#BACKSPACE to protected.
+- API Addition: TextField and TextArea are providing the protected method TextField#checkFocusTraverse(char) to handle the focus traversal.
+- API Addition: UIUtils provides the constants UIUtils#isAndroid and UIUtils#isIos now.
+- Fixed: The behaving of TextFields and TextAreas new line and focus traversal works like intended on all platforms now.
 
 [1.9.10]
 - API Addition: Allow target display for maximization LWJGL3 backend
